# rust-mailsy

./: Cargo.toml  README.md
src/: main.rs
src/libs/: structs.rs  utils.rs
